Multi-language text, navbar style..
Added Multi-language text (English-Arabic) to choose the language you want the site to be.
Made the navbar style better and added more options.
Made a check to see if the user is admin or not to allow him to login Admin Control Panel.

--- a/admincp/layout/css/adminpanel.css
+++ b/admincp/layout/css/adminpanel.css
@@ -5,6 +5,7 @@ body {
 }
 
 /*  General End     */
+
 /*  Start Login Form */
 .admin-cp-login {
     width:50%;
@@ -36,3 +37,29 @@ body {
 }
 
 /*  Start Login Form */
+
+/*  Admin Navbar Start */
+
+.admin-navbar .navbar-brand {
+    margin-right:70px;
+}
+
+.admin-navbar.navbar-dark .navbar-nav .nav-item {
+    padding:0 10px;
+}
+
+.admin-navbar.navbar-dark .navbar-nav .nav-link{
+    transition:all .5s ease-in-out;
+    letter-spacing: 1.2px;
+}
+
+.admin-navbar .navbar-nav .nav-item {
+    
+}
+
+.admin-navbar.navbar-dark .navbar-nav .nav-link:hover {
+    background:#4e4e4e;
+}
+
+
+/*  Admin Navbar End    */
